# kandela-selfhost

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  LICENSE-CLIENT  NOTICE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.zh.md  pyproject.toml
docker/: .env.example  Dockerfile  compose.yaml  entrypoint.sh
docs/legal/: BETA_DISCLAIMER.md  DATA_BREACH_PROCEDURE.md  DEPLOYMENT_SECURITY.md  IP_EXPOSURE_ANALYSIS.md  LEGAL_COMPLIANCE_REVIEW.md  LEGAL_REVIEW_PRE_BETA.md  OPERATOR_INFO.md  PRIVACY_POLICY.md  SECURITY_AUDIT.md  SECURITY_COMPLIANCE_CHECKLIST.md  SECURITY_LEGAL_REVIEW_SUMMARY.md  SECURITY_POLICY.md  TERMS_OF_SERVICE.md
src/memory_mcp/: __init__.py  __main__.py  auth.py  constants.py  dashboard.py  i18n.py  install.py  server.py
src/memory_mcp/db/: __init__.py  bm25.py  fusion.py  session_env.py  store.py  utilization.py
src/memory_mcp/importance/: __init__.py  rules.py  scorer.py
src/memory_mcp/templates/: __init__.py  claude_md_guide.py  command_prompts.py  hook_prompts.py  onboarding_templates.py
src/memory_mcp/tools/: models.py
src/memory_mcp/utils/: formatting.py  schema.py
tests/: test_auto_recall.py  test_brief_recall.py  test_checklist.py  test_compact_format.py  test_cross_project.py  test_dashboard.py  test_duplicate_detection.py  test_guide.py  test_hook_prompts.py  test_importance.py  test_inbox.py  test_infra.py  test_json_string_params.py  test_memory_activation.py  test_priority.py  test_progress.py  test_project_management.py  test_project_mismatch.py  test_rag.py  test_schema_compat.py  test_session_continuity.py  test_session_tracking.py  test_store.py  test_update.py
